--- a/ydisk_skillbox/SkillboxDrive/en.lproj/Localizable.strings
+++ b/ydisk_skillbox/SkillboxDrive/en.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "Log in" = "Log in";
 "Log out" = "Log out";
 "Loging out" = "Loging out";
+"Get started" = "Get started";
 
 "Occupied" = "Occupied";
 "Left" = "Left";
@@ -33,7 +34,7 @@
 
 "All files in one place" = "All files in one place";
 "Offline access" = "Offline access";
-"Share your files with friends" = "Share your files with friends";
+"Share your files with others" = "Share your files with others";
 
 "This image will be deleted" = "This image will be deleted";
 "Delete the image" = "Delete the image";
