--- a/ydisk_skillbox/SkillboxDrive/ru.lproj/Localizable.strings
+++ b/ydisk_skillbox/SkillboxDrive/ru.lproj/Localizable.strings
@@ -38,9 +38,11 @@
 "Offline access" = "Доступ к файлам без интернета";
 "Share your files with others" = "Делитесь вашими файлами с другими";
 
+"This file will be deleted" = "Выбранный файл будет удален";
 "This image will be deleted" = "Данное изображение будет удалено";
 "Delete the image" = "Удалить изображение";
 
+"Delete" = "Удалить";
 "Share" = "Поделиться";
 "Send file" = "Файлом";
 "Send link" = "Ссылкой";
