--- a/ydisk_skillbox/SkillboxDrive/Application/ru.lproj/Localizable.strings
+++ b/ydisk_skillbox/SkillboxDrive/Application/ru.lproj/Localizable.strings
@@ -34,7 +34,7 @@
 "Profile" = "Профиль";
 "You have no uploaded files" = "У вас пока нет опубликованных файлов";
 "Are you sure, you want to log out? All local data will be deleted!" = "Вы уверены, что хотите выйти? Все локальные данные будут удалены!";
-"Delete file" = "Убрать публикацию";
+"Delete the file" = "Убрать публикацию";
 
 "All files in one place" = "Теперь все ваши документы в одном месте";
 "Offline access" = "Доступ к файлам без интернета";
